--- a/src/project/templates/hello_user.html
+++ b/src/project/templates/hello_user.html
@@ -27,7 +27,7 @@
                     <hr class="my-0">
 
                     <p class="subtitle has-text-dark  is-size-4-desktop is-size-5-touch">
-                        Vous êtes bien connectés
+                        Vous êtes bien connecté
                     </p>
 
 
