--- a/src/project/templates/hello_user.html
+++ b/src/project/templates/hello_user.html
@@ -19,25 +19,15 @@
             <div class="hero-body">
 
                 <div class="container" style="margin:auto;max-width:1250px;">
-
-
                     <p class="title has-text-dark  is-size-3-desktop is-size-4-touch">
-                        Hello {{request.user}}
+                        Hello {{request.user}} - vous êtes bien connecté
                     </p>
-                    <hr class="my-0">
-
-                    <p class="subtitle has-text-dark  is-size-4-desktop is-size-5-touch">
-                        Vous êtes bien connecté
+                    <hr>
+                    <p class="subtitle has-text-dark">
+                        <a href="{% url 'app:compute_squares' 500 %}">Un calcul intéressant via une référence à la vue</a>
                     </p>
-
-
                 </div>
-
-
-
             </div>
         </section>
-
     </body>
-
 </html>
