--- a/src/project/templates/slots/compare_time_slots.html
+++ b/src/project/templates/slots/compare_time_slots.html
@@ -57,7 +57,7 @@
 
                             </div>
 
-                            <div class="column">
+                            <div class="column has-background-grey" style="border-radius:6px;">
 
                                 {% for ts in timeslots %}
 
